pretty far along working model for duckdb as file format slower on inserts (appender is not as good as arrow would be) first query slower than parquet due to download-first, then follow-on queries are faster by as much as 35%
duckdb wins when it is the big table in joins over parquet.